[package]
name = "directory-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17"
crossterm = "0.22"
env_logger = "0.7"
log = "0.4"
anyhow = "1"
tokio = { version = "1", features=[ "full" ] }
